--- a/src/components/UI/Button/Button.module.css
+++ b/src/components/UI/Button/Button.module.css
@@ -1,4 +1,5 @@
-.button {width: 100%;
+.button {
+    width: 100%;
      font: inherit;
      padding: 0.5rem 1.5rem;
      border: 1px solid #8b005d;
@@ -8,12 +9,6 @@
      cursor: pointer;
 }
 
-   @media (min-width: 768px) {
-    .button{
-        width: auto;
-    }
-   }
-
    button:focus {
         outline: none;
          }
@@ -22,4 +17,11 @@
    button:active {
            background: #ac0e77;
            border-color: #ac0e77;
-           box-shadow: 0 0 8px rgba(0, 0, 0, 0.26);}
+           box-shadow: 0 0 8px rgba(0, 0, 0, 0.26);
+   }
+
+@media (min-width: 768px) {
+    .button{
+        width: auto;
+    }
+}
